examples/sample-product-chart/chart-test/reports/run-curated-live-20260602-234624-95262/scenario-scheme-https-only-20260602-234801/artifacts/manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-03T03:48:30Z"
    generation: 1
    labels:
      app: sample
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "454"
    uid: b3748e11-e3d2-4027-8b6e-07b08c4f3b88
  spec:
    ingressClassName: nginx
    rules:
    - host: sample.local
      http:
        paths:
        - backend:
            service:
              name: sample
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
